--- a/package.json
+++ b/package.json
@@ -6,18 +6,25 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "adaro": "^0.1.5",
     "body-parser": "~1.0.0",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "dustjs-helpers": "^1.2.0",
+    "dustjs-linkedin": "^2.4.0",
     "express": "~4.0.0",
     "express-session": "^1.6.5",
-    "jade": "~1.3.0",
     "mongoose": "^3.8.13",
+    "mongoose-timestamps": "0.0.1",
     "morgan": "~1.0.0",
     "node-uuid": "^1.4.1",
     "passport": "^0.2.0",
     "passport-oauth2": "^1.1.2",
     "request": "^2.37.0",
+    "st": "^0.5.1",
     "static-favicon": "~1.0.0"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5"
   }
 }
