--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dustjs-linkedin": "^2.4.0",
     "express": "~4.0.0",
     "express-session": "^1.6.5",
+    "grunt-dustjs-linkedin": "^0.5.0",
     "mongoose": "^3.8.13",
     "mongoose-timestamps": "0.0.1",
     "morgan": "~1.0.0",
@@ -25,6 +26,10 @@
     "static-favicon": "~1.0.0"
   },
   "devDependencies": {
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-less": "^0.11.3",
+    "grunt-contrib-uglify": "^0.5.0",
+    "grunt-dustjs-linkedin": "^0.5.0"
   }
 }
