--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dustjs-helpers": "^1.2.0",
     "dustjs-linkedin": "^2.4.0",
     "express": "~4.0.0",
-    "express-session": "^1.6.5",
+    "express-session": "^1.8.1",
+    "express-sessions": "^1.0.5",
     "grunt-dustjs-linkedin": "^0.5.0",
     "mongoose": "^3.8.13",
     "mongoose-timestamps": "0.0.1",
